Fixed timer buttons not showing and testing removed header for design

--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -20,7 +20,7 @@
 }
 
 .iterator .count {
-    font-size: 4rem;
+    font-size: 15vw;
     margin: 15px -10px 15px 0;
 }
 
