--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -4,6 +4,6 @@
 }
 
 .timer h1 {
-    font-size: 5rem;
+    font-size: 15vw;
     margin: 0;
 }
